bk_ida/gccida/g3/splay_tree_insert
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/splay_tree_insert/src/splay-tree.c:789:10: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
valuea[0].m128i_i64[0] = value; 
~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/splay_tree_insert/src/splay-tree.c:840:63: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
valuea[0] = ( __m128i)_mm_loadh_ps( ( const double *)valuea[0].m128i_i64); 
                                                     ~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/splay_tree_insert/src/splay-tree.c:856:12: error: expected expression
*( _OWORD *)&result->left = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/splay_tree_insert/src/splay-tree.c:856:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&result->left = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/splay_tree_insert/src/splay-tree.c:864:63: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
valuea[0] = ( __m128i)_mm_loadh_ps( ( const double *)valuea[0].m128i_i64); 
                                                     ~~~~~~~~~^~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/splay_tree_insert/src/splay-tree.c:888:26: error: member reference base type '__m128i' (vector of 2 'long long' values) is not a structure or union
result->value = valuea[0].m128i_i64[0]; 
                ~~~~~~~~~^~~~~~~~~~
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/splay_tree_insert/src/obj/splay-tree.o] Error 1
